# CrowdPad

./: README.md
.github/workflows/: app-deploy.yaml  server-deploy.yaml
app/: .env.example  .gitignore  .prettierrc.json  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  main.tsx
app/src/api/: config.ts
app/src/components/: AppPageLayout.tsx  Auth.tsx  Chat.tsx  Controls.tsx  Gamepad.tsx  Login.tsx
app/src/components/admin/: UpdateConfig.tsx
app/src/constants/: cookies.ts
app/src/containers/: Admin.tsx  Home.tsx  Login.tsx
app/src/contexts/: AuthContext.tsx  WebSocketContext.tsx
app/src/hooks/: useAuth.ts  useWebSocket.ts
app/src/reducers/: webSocketReducer.ts
app/src/routes/: AuthenticatedUserRoute.tsx  AuthenticatedUserRouteWrapper.tsx
app/src/types/: index.ts  serverMessages.ts
app/src/utils/: cookies.ts  socket.ts  webSocket.ts
cli/: .env.example  .gitignore  README.md  package.json  pyproject.toml  test-websocket.js  tsconfig.json
cli/src/: index.ts
cli/src/crowdpad_cli/: device.py  device_linux.py  main.py
cli/src/crowdpad_cli/devices/: controller.py  linux_controller.py  stub_controller.py
cli/src/crowdpad_cli/models/: game_input.py
cli/src/utils/: mgbaHttp.ts
cli2/: README.md  pyproject.toml
cli2/src/crowdpad_cli/: main.py
server/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  eslint.config.ts  fly.toml  package.json  tsconfig.json
server/public/: index.html
server/src/: app.ts  constants.ts  websockets.ts
server/src/db/: index.ts  schema.ts
server/src/middleware/: auth.ts  cors.ts
server/src/routes/: commands.ts  config.ts
server/src/scripts/: index.ts
server/src/scripts/utils/: ui.ts
server/src/types/: clientMessages.ts  serverMessages.ts  shared.ts
server/src/utils/: config.ts
server/src/utils/websockets/: handlers.ts  service.ts
