[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crowdpad-cli"
version = "0.1.0"
description = "Create a virtual joypad and listens for commands from a remote server."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-uinput==1.0.1",
    "click==8.3.0",
    "requests==2.32.5",
    "pydantic==2.12.0",
]

[project.scripts]
start = "crowdpad_cli.main:cli"

[tool.setuptools]
package-dir = { "" = "src" }
